Dan's changes